laborations/lab1/test/bad/bad065.cc
void bar() {
	
	do 45; while 0;

}
